Fix some formatting and get a very basic gRPC server running/working (#31)
* Fix some formatting and get a very basic gRPC server running/working

* Finish gRPC implementation

* Changes by lettuce

* Fix checkstyle errors

* Allow user to specify file name, very hacky atm

* Remove test proto file and fix some weird formatting