@@ -5,12 +5,10 @@ import org.fibsters.interfaces.InputPayload;
 
 import java.util.Arrays;
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class InputPayloadImpl implements InputPayload {
 
     private String uniqueID;
-
 
     public enum DirectiveType {
         GET_JOB_STATUS_BY_ID,
@@ -24,24 +22,7 @@ public class InputPayloadImpl implements InputPayload {
     private PayloadDataImpl payloadData;
     private String outputType;
     private String outputSource;
-    private String[] payloadOutputArrayParsed;
 
-    /**
-     * Constructor for InputPayloadImpl
-     *
-     * @param inputConfig
-     * @throws Exception
-     */
-    /*
-    Example correct JSON input:
-    {
-        "uniqueID": "1234",
-        "inputType": "json",
-        "delimiter": ",",
-        "outputType": "json",
-        "outputSource": "output.json"
-    }
-     */
     /**
      * Static factory method to create an instance of InputPayloadImpl from a JSON string.
      *
@@ -51,11 +32,15 @@ public class InputPayloadImpl implements InputPayload {
      */
     public static InputPayloadImpl createInputPayloadFromString(String inputString) throws Exception {
         Gson gson = new Gson();
+
         InputPayloadImpl inputPayload = gson.fromJson(inputString, InputPayloadImpl.class);
+
         inputPayload.postDeserialize();
+
         return inputPayload;
     }
 
+    @Override
     public void postDeserialize() throws Exception {
         switch (this.directive) {
             case GET_JOB_STATUS_BY_ID:
@@ -86,52 +71,10 @@ public class InputPayloadImpl implements InputPayload {
         List<DirectiveType> directiveTypes = Arrays.asList(InputPayloadImpl.DirectiveType.values());
         List<String> directiveTypeNames = directiveTypes.stream()
                 .map(Enum::name)
-                .collect(Collectors.toList());
+                .toList();
         return directiveTypeNames.toString();
     }
 
-    /*
-    public InputPayloadImpl(JSONObject inputConfig) throws Exception {
-
-        try { // Attempts to convert the JSON object to a valid input payload
-            this.uniqueID = inputConfig.getString("uniqueID");
-            this.directive = inputConfig.getString("directive");
-            this.inputType = inputConfig.getString("inputType");
-            this.delimiter = inputConfig.getString("delimiter");
-            this.outputType = inputConfig.getString("outputType");
-            this.outputSource = inputConfig.getString("outputSource");
-
-            if (Objects.equals(this.inputType, "json")) {
-                Object payloadData = inputConfig.getJSONObject("payloadData");
-
-                if (payloadData instanceof JSONObject) {
-                    this.payloadDataJSON = (JSONObject) payloadData;
-                } else if (payloadData instanceof String) {
-                    this.payloadDataJSON = new JSONObject(inputConfig.getString("payloadData"));
-                }
-
-                this.payloadDataParsed = new int[this.payloadDataJSON.getJSONArray("calcFibNumbersUpTo").length()];
-
-                for (int i = 0; i < this.payloadDataJSON.getJSONArray("calcFibNumbersUpTo").length(); i++) {
-                    this.payloadDataParsed[i] = this.payloadDataJSON.getJSONArray("calcFibNumbersUpTo").getInt(i);
-                }
-
-                if (this.payloadDataJSON.has("outputLocations")) {
-                    this.payloadOutputArrayParsed = new String[this.payloadDataJSON.getJSONArray("outputLocations").length()];
-
-                    for (int i = 0; i < this.payloadDataJSON.getJSONArray("outputLocations").length(); i++) {
-                        this.payloadOutputArrayParsed[i] = this.payloadDataJSON.getJSONArray("outputLocations").getString(i);
-                    }
-                }
-
-            }
-        } catch (Exception e) {
-            throw new Exception("Error: " + e.getMessage());
-        }
-
-
-    }
-    */
     @Override
     public String getUniqueID() {
         return this.uniqueID;
@@ -177,18 +120,8 @@ public class InputPayloadImpl implements InputPayload {
     }
 
     @Override
-    public String getOutputData() {
-        return null;
-    }
-
-    @Override
     public String getOutputSource() {
         return this.outputSource;
-    }
-
-    @Override
-    public void printPayload() {
-
     }
 
     @Override
